stylesheet.less
/* ... */
.widget.ecomcheckout table tr td .checkout-quantitybtn button {
	padding: 0;
}

.widget.tweet a,
.widget.paypalbuynow .widget.button.paypal,
.widget.dropbox button {
	padding-left: 40px;
	display: inline-block;
}

// Forms
fieldset .btn,
fieldset button,
form button {
	vertical-align: middle;
}

.form-group,
.widget.ecomproductslist .productlist-display-form .form-group,
.widget.ecomproductslist .productlist-item-count .form-group {
	padding-bottom: 10px;
	margin-bottom: 0;
}


// Buttons
.widget.feature .feature-bgimg .content button,
.contactform button.btn,
.widget.button button,
.widget .btn,
.widget.profile form button,
.widget.paypalbuynow .widget.button.paypal,
.widget.tweet a,
.widget.dropbox button,
.signupform fieldset button,
.blog-search-submit-button,
.widget.ecomproduct .ecom-product .btn,
.widget.ecomcheckout .checkout-order-button,
.widget.ecombasket .ecombasket-list-container .ecombasket-checkout-wrap .ecombasket-checkout-link,
.widget.ecomcategorieslist ul li a,
.blog-post-more-link a,
.blog-list-footer .paginate-older,
.widget.clicktocall a,
.menu-section-list li a,
.widget.ecombasket .ecombasket-pull {
    border-radius: 0;
    -webkit-appearance: none;
}

input,
input[type=email],
input[type=text],
input[type=search],
textarea,
.contactform input,
.contactform textarea,
.widget.profile form fieldset input {
	margin: 0;
	background-color: @color-swatch1;
	text-indent: 0;
	padding: 8px 9px 10px;
	border: 1px solid darken(@color-swatch1, 10%);
	outline: none;
	-webkit-transition: border .2s;
	-moz-transition: border .2s;
	-ms-transition: border .2s;
	transition: border .2s;
	&:hover, &:focus {
		border: 1px solid darken(@color-swatch1, 20%);
	}
}

button:disabled,
button.btn:disabled:hover,
.widget.ecomcheckout .checkout-order-button:disabled {
	background-color: darken(@color-swatch1, 40%);
	color: @color-swatch1;
	cursor: not-allowed;
	&:hover {
		background-color: darken(@color-swatch1, 50%);
		color: @color-swatch1;
	}
}

.widget.profile form fieldset input,
input[type=email],
input[type=text],
input[type=search],
.signupform fieldset input {
	height: 41px;
}

.widget.profile, .widget.signupform, .widget.blogsearch {
	input[type=email], input[type=search] {
		width: 100%;
		padding-right: 74px;
		margin-right: -70px;
	}
}

textarea {
	resize: vertical;
}

.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
.widget.ecomcheckout .delivery select,
select {
	cursor: pointer;
	-webkit-appearance: none;
	-webkit-border-radius: 0;
	position: relative;
	background-image: image('/images/arrow-down.png');
	background-repeat: no-repeat;
	background-position: right 12px center;
	background-position-x: 98%;
	background-position-y: 53%;
	margin-bottom: 12px;
	padding-right: 33px;
    -moz-appearance:none;
}

select::-ms-expand {
    display: none;
}

.svg {
	.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select, select {
		background-image: image('/images/arrow-down.svg');
	}
}

.ecom-product-long-description {
    margin-top: 1em;
}
/* ... */

